--- a/.github/actions/Mend/action.yml
+++ b/.github/actions/Mend/action.yml
@@ -26,4 +26,4 @@ runs:
       uses: actions/upload-artifact@v3
       with:
         name: WhiteSource Report
-        path: whitesource/
+        path: Mend/
