--- a/.github/workflows/cx_ci.yaml
+++ b/.github/workflows/cx_ci.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: ⚔️ Checkmarx
         uses: hernan-soto/checkmarx-cxflow-github-action-RSG@v2.16
         with:
-          project: "A&R Core Library"
+          project: "Sample Project Scan"
           team: ${{ secrets.CHECKMARX_TEAM }}
           checkmarx_url: ${{ secrets.CHECKMARX_URL }}
           checkmarx_username: ${{ secrets.CHECKMARX_USER }}
