--- a/.github/workflows/burp_ci.yml
+++ b/.github/workflows/burp_ci.yml
@@ -1,32 +1,16 @@
 name: Burpsuite Scan
 
 on:
-  workflow_call:
-    inputs:
-      burpsuite:
-        description: Enable a Burpsuite scan
-        type: boolean
-        default: false
-        required: false
-      burpsuite-site-id:
-        description: The Burpsuite scan id to run
-        type: number
-        required: false
-      
-    secrets:
-      burpsuite-api-key:
-        description: The key for the Burpsuite API service account
-        required: false
-     
+  push:
+
 
 jobs:
-  
-  burpsuite:
-    if: inputs.burpsuite
+  Burpsuite-scan:
     name: DAST / Burpsuite
     runs-on: [self-hosted, Linux, on-prem, shared]
+   
     steps:
       - uses: LexisNexis-RBA/bsuk-github-security/.github/actions/burpsuite@nexus-1207-sast-and-dast
         with:
-          site-id: ${{ inputs.burpsuite-site-id }}
-          api-key: ${{ secrets.burpsuite-api-key }}
+          site-id: ${{ secrets.BURPSUITE_SITEID }}
+          api-key: ${{ secrets.BURPSUITE_APIKEY }}
