--- a/.github/workflows/cx_ci.yml
+++ b/.github/workflows/cx_ci.yml
@@ -9,7 +9,7 @@ on: #workflow_dispatch
 jobs:
   cx-scan:
     name: Checkmarx Scan
-    runs-on: [self-hosted, Linux, on-prem, shared]  #self-hosted #
+    runs-on: [checkmarx-scanner, no-db] #[self-hosted, Linux, on-prem, shared]  #self-hosted #
     continue-on-error: true
 
     steps:
